# retail-demand-forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/processed/: eda_summary.json
docs/: eda_report.md
src/app/: dashboard.py
src/data/: eda.py  generate_data.py
src/features/: build_features.py
src/models/: forecast.py  train.py
tests/: test_pipeline.py
