[project]
name = "retail-demand-forecasting"
version = "1.0.0"
description = "SKU-level retail demand forecasting: synthetic data pipeline, leakage-safe features, gradient-boosted model vs. seasonal-naive baseline, and an interactive Streamlit dashboard."
authors = [{ name = "Muhammad Farooq Shafi", email = "mfarooqsgafee333@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
